Fix header formatting in despachos.html

--- a/DESPACHOS/despachos.html
+++ b/DESPACHOS/despachos.html
@@ -87,7 +87,7 @@
   </style>
 </head>
 <body>
-  <h1>CENTRO SANITARIO<br>LARRABIDE</h1>
+  <h1>CENTRO SANITARIO LARRABIDE</h1>
   <div id="cards-container" class="container"></div>
   <p id="error-message" class="error"></p>
 
