--- a/DESPACHOS/anuncio.html
+++ b/DESPACHOS/anuncio.html
@@ -228,7 +228,7 @@
         <div class="services">
           <h2>Especialidades</h2>
           <p>Espacios versátiles para cualquier especialidad sanitaria.</p>
-          <p>Consulta para profesionales de la salud: medicina, psicología sanitaria, logopedia, fisioterapia... y más</p>
+          <p>Consulta para profesionales de la salud: medicina, psicología sanitaria, logopedia, fisioterapia... y más.</p>
         </div>
         <div class="horario">
           <h2>Horario</h2>
